test_case/rust-lang_rust/49898_389783478_28.rs
compile_fail,E0277\nfn some_func<T>(foo: T) {\n    println!(\"{:?}\", foo); // error: the trait `core::fmt::Debug` is not\n                           //        implemented for the type `T`\n}\n\nfn main() {\n   or[E0599]: no method named `test` found for type `i32` in the current scope\n  --> /checkout/src/test/ui/trivial-bounds-leak.rs:34:10: in fn foo\n   |\nLL |     3i32.test(); //~ ERROR\n   |          ^^^^\n   |\n   = help: items from traits can only be used if the trait is implemented and in scope\n   = note: the following trait defines an item `test`, perhaps you need to implement it:\n           candidate #1: `Foo`\n\n"}
[00:50:37] {"message":"the trait bound `i32: Foo` is not satisfied","code":{"code":"E0277","explanation":"\nYou tried to use a type which doesn't implement some trait in a place which\nexpected that trait. Erroneous code example:\n\n